fix missing overflow style for blockquote

--- a/assets/stylesheets/_screen.scss
+++ b/assets/stylesheets/_screen.scss
@@ -442,6 +442,7 @@ article {
         margin: 0.5em 0 23px 1em;
         padding: 4px 0 2px 10px;
         color: var(--color-aside-note);
+        overflow-x: auto;
 
         p:last-child {
             margin-bottom: 0;
